fix local storage z-index

--- a/assets/app/nav/nav.component.less
+++ b/assets/app/nav/nav.component.less
@@ -117,7 +117,7 @@ a {
   position: absolute;
   top: 0;
   left: 0;
-  z-index: 1;
+  z-index: 10;
   width: 100%;
   height: 100%;
   text-align: center;
@@ -161,6 +161,7 @@ a {
   color: @lightColor;
   padding: 12px;
   opacity: 0.9;
+  z-index: 100;
 }
 
 .accept {
