--- a/assets/app/texts/text.component.css
+++ b/assets/app/texts/text.component.css
@@ -23,6 +23,8 @@
   margin-left: auto;
   margin-right: auto;
   opacity: 0.9;
+  z-index: -70;
+  position: relative;
 }
 .jumbotron h1 {
   font-weight: 900;
@@ -45,6 +47,8 @@
   max-width: 420px;
   padding: 1vw 2vw;
   opacity: 0.9;
+  z-index: -70;
+  position: relative;
 }
 .jumbotron video {
   position: absolute;
